Scrubbing in the Clip Editor Graph Editor doesn't work #64257

Closed
opened 2019-05-07 16:47:57 +02:00 by William Reynish · 8 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38

Blender Version
Broken: version: 2.80 (sub 60), branch: master (modified), commit date: 2019-05-07 14:12, hash: 2eb217b155
Worked: ?

Short description of error
Scrubbing in the Clip Editor Graph Editor doesn't work. This is unrelated to the recent scrubbing area work, but the issue was discovered while working on it. Strangely, this problem even existed in 2.79.

Exact steps for others to reproduce the error

  • Switch to the Clip Editor
  • Switch the Clip Editor mode to 'Graph'
  • Scrub. It doesn't work.
**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38 **Blender Version** Broken: version: 2.80 (sub 60), branch: master (modified), commit date: 2019-05-07 14:12, hash: `2eb217b155` Worked: ? **Short description of error** Scrubbing in the Clip Editor Graph Editor doesn't work. This is unrelated to the recent scrubbing area work, but the issue was discovered while working on it. Strangely, this problem even existed in 2.79. **Exact steps for others to reproduce the error** - Switch to the Clip Editor - Switch the Clip Editor mode to 'Graph' - Scrub. It doesn't work.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

@sebastian_k Just checking, is this actually a bug or not? And can you reproduce?

@sebastian_k Just checking, is this actually a bug or not? And can you reproduce?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
William Reynish self-assigned this 2019-05-07 16:59:18 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

After talking to @sebastian_k he tells me you must have footage loaded for it to work. So I presume it's working as intended.

@Sergey can you confirm?

Closing for now.

After talking to @sebastian_k he tells me you must have footage loaded for it to work. So I presume it's working as intended. @Sergey can you confirm? Closing for now.

This issue was referenced by a488a21f4f

This issue was referenced by a488a21f4fa0202c1760a8f77ec2752510f1fe76

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64257
No description provided.