Fix T64257: Scrubbing in the Clip Editor Graph Editor doesn't work

While intent of such action is not very clear, there is no real
reason to forbid it.